bookinfo/base/virtualservice/edge/bookinfo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: bookinfo-v1-productpage-9080
              namespace: gloo-system
#        options:
#          prefixRewrite: /productpage
